# one-collect

./: .gitignore  CLAUDE.md  THIRD-PARTY-NOTICES.md
.claude/agents/: architecture-expert.md  design-patterns-expert.md  testing-expert.md  usage-guide-expert.md
.claude/prompts/: README.md
.claude/prompts/sessions/: 2025-01-20_initial_setup.md  2025-11-25_update_claude_md.md
.github/agents/: tracing-expert.md
.github/workflows/: benchmarks.yml  build-and-test.yml  ci.yml  docker-tests.yml
docs/: one_collect-design.md  record-trace-design.md  ruwind-design.md
one_collect/: Cargo.toml  UnitTest.pprof
one_collect/src/: intern.rs  lib.rs  openat.rs  procfs.rs  tracefs.rs  user_events.rs
one_collect/src/etw/: abi.rs  events.rs  mod.rs
one_collect/src/event/: mod.rs
one_collect/src/helpers/: uprobe.rs
one_collect/src/helpers/callstack/os/: linux.rs
one_collect/src/helpers/dotnet/: nettrace.rs
one_collect/src/helpers/dotnet/os/: linux.rs  windows.rs
one_collect/src/helpers/dotnet/scripting/: mod.rs
one_collect/src/helpers/exporting/: attributes.rs  graph.rs  mappings.rs  mod.rs  modulemetadata.rs  pe_file.rs  process.rs  record.rs  scripting.rs  symbols.rs  universal.rs
one_collect/src/helpers/exporting/formats/: nettrace.rs  perf_view.rs  pprof.rs
one_collect/src/helpers/exporting/os/: linux.rs  windows.rs
one_collect/src/os/: linux.rs  mod.rs  windows.rs
one_collect/src/perf_event/: abi.rs  mod.rs
one_collect/src/perf_event/rb/: mod.rs  source.rs
one_collect/src/scripting/: mod.rs
one_collect/src/scripting/os/: linux.rs  windows.rs
record-trace/: Cargo.toml
record-trace/engine/: Cargo.toml
record-trace/engine/src/: commandline.rs  export.rs  lib.rs  recorder.rs
record-trace/ffi/: Cargo.toml
record-trace/ffi/src/: lib.rs
record-trace/src/: main.rs
ruwind/: Cargo.toml
ruwind/examples/: test_tracing.rs
ruwind/src/: dwarf.rs  elf.rs  lib.rs  machine.rs  module.rs  process.rs  x64unwinder.rs
