[package]
name = "one_collect"
description = "Cross-platform library for capturing machine-level traces."
version = "0.0.0-dev"
edition = "2021"
license = "MIT"
repository = "https://github.com/microsoft/one-collect"

[features]
default = ["scripting"]
scripting = []

[dependencies]
anyhow = "1.0.75"
twox-hash = "1.6.3"
protobuf = "3.7.*"
flate2 = "1.0.31"
ruwind = { path = "../ruwind" }
chrono = "0.4.39"
rhai = "1.21.0"
sha1 = "0.10.6"
tracing = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.153"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "event"
harness = false

[[bench]]
name = "intern"
harness = false

[[bench]]
name = "export"
harness = false
